--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,21 @@
-spring:
-  application:
-    name: exam-system-server-new
 server:
   port: 8080
+spring:
+  datasource:
+    type: com.zaxxer.hikari.HikariDataSource
+    url: jdbc:mysql://<hostname>:<port>/<database>?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=GMT%2b8
+    username: <username>
+    password: <password>
+    hikari:
+      connection-test-query: SELECT 1 # ??????
+      connection-timeout: 60000 #?????????,??30?
+      idle-timeout: 500000 #?????????????600000?10???
+      max-lifetime: 540000 #??????????????????0???????????1800000?30??
+      maximum-pool-size: 12 #????????????10
+      minimum-idle: 10 #????????
+      pool-name: SPHHikariPool # ?????
+
+#?????????sql???????
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
